hphp/hack/test/typecheck/keys.php.exp
File "keys.php", line 9, characters 26-27:
Invalid argument (Typing[4110])
File "keys.php", line 12, characters 43-48:
Expected string
File "keys.php", line 8, characters 8-18:
But got int
File "keys.php", line 8, characters 8-18:
This can only be indexed with integers
